--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ input[type="number"] {
 }
 
 button[type="submit"] {
-    background-color: #01ad5d;
+    background-color: #007bff;
     color: #fff;
     padding: 10px;
     border: none;
@@ -66,7 +66,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #016134;
+    background-color: #0056b3;
 }
 
 /* Estilo para o resultado */
